# livraria

./: db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0003_autor_livro.py  0004_alter_autor_options_livro_autores.py
livraria/models/: __init__.py  livro.py
livraria/serializers/: autor.py  categoria.py  editora.py  livro.py
livraria/views/: autor.py  categoria.py  editora.py  livro.py
