[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "mariana", email = "marianaoliveira9142@gmail.com"},
]
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.1.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
